force-app/main/default/objects/PRISM_Asset__c/PRISM_Asset__c.object-meta.xml
<CustomObject>
    <description>Equipment component associated with a Circuit.</description>

    <label>Asset</label>
    <nameField>
        <label>Asset ID</label>
        <type>AutoNumber</type>
        <displayFormat>AST-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>