force-app/main/default/objects/PRISM_Asset__c/fields/Circuit__c.field-meta.xml
<CustomField>
    <fullName>Circuit__c</fullName>
    <label>Circuit</label>
    <type>MasterDetail</type>
    <referenceTo>PRISM_Circuit__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    
</CustomField>