force-app/main/default/objects/PRISM_Asset__c/fields/ComponentType__c.field-meta.xml
<CustomField>
    <fullName>ComponentType__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Insulator</fullName><default>false</default><label>Insulator</label></value>
            <value><fullName>Conductor</fullName><default>false</default><label>Conductor</label></value>
            <value><fullName>Fuse</fullName><default>false</default><label>Fuse</label></value>
            <value><fullName>Recloser</fullName><default>false</default><label>Recloser</label></value>
            <value><fullName>Capacitor Bank</fullName><default>false</default><label>Capacitor Bank</label></value>
            <value><fullName>Voltage Regulator</fullName><default>false</default><label>Voltage Regulator</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
    <required>true</required>
</CustomField>