force-app/main/default/objects/PRISM_Asset__c/fields/InstallYear__c.field-meta.xml
<CustomField>
    <fullName>InstallYear__c</fullName>
    <label>Install Year</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>