force-app/main/default/objects/PRISM_Asset__c/fields/OperationalStatus__c.field-meta.xml
<CustomField>
    <fullName>OperationalStatus__c</fullName>
    <label>Operational Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Inactive</fullName><default>false</default><label>Inactive</label></value>
            <value><fullName>Decommissioned</fullName><default>false</default><label>Decommissioned</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>