force-app/main/default/objects/PRISM_Asset__c/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <label>Serial Number</label>
    <type>Text</type>
    <length>100</length>
    <unique>true</unique>
</CustomField>